Handling 0-dim tensor for ListContainer

--- a/06_cuda_cnn_hooks_init.ipynb
+++ b/06_cuda_cnn_hooks_init.ipynb
@@ -981,6 +981,8 @@
     "  def __getitem__(self, idx):\n",
     "    if isinstance(idx, (int, slice)):\n",
     "      return self.items[idx]\n",
+    "    if isinstance(idx, torch.Tensor) and len(idx.size()) == 0: # Handle 0-dim tensor\n",
+    "      return self.items[idx.item()]\n",
     "    if isinstance(idx[0], bool):\n",
     "      assert len(idx) == len(self) # bool mask\n",
     "      return [o for m, o in zip(idx, self.items) if m]\n",
@@ -1797,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
